# Morgo

./: .gitignore  Cargo.toml  LICENSE  README.md  should-not-exist.txt
.github/workflows/: release.yml
.morgo/: mcp-governance.json
scripts/: boss_ab_matrix.sh  boss_u6_u9_rollout_report.py  install.sh
src/: lib.rs  main.rs
src/bootstrap/: config_root.rs  mod.rs  model_profiles.rs  proxy_env.rs  runtime.rs  setup.rs  state.rs  teammate_registry.rs  warnings.rs
src/command/: mod.rs  registry.rs  types.rs
src/context/: git.rs  memory.rs  mod.rs  plan.rs  skills.rs  user_context.rs
src/coordinator/: mod.rs  mode.rs  prompt.rs  worker.rs
src/core/: attachment.rs  boss.rs  boss_acceptance.rs  boss_actor_runtime.rs  boss_context_brief.rs  boss_runtime.rs  boss_state.rs  boss_test_readiness.rs  boss_test_sample_sink.rs  concurrency.rs  context.rs  engine.rs  events.rs  evidence_scope.rs  housekeeping.rs  lism_ab_sample.rs  message.rs  mod.rs  output.rs  prompt_budget.rs  prompt_cache_adapter.rs  prompt_segment.rs  query_loop.rs  state_fact_ledger.rs  state_frame.rs  state_frame_archive.rs  state_frame_hydration.rs  state_frame_loop.rs  state_frame_model_resolver.rs  state_frame_model_router.rs  state_frame_orchestrator.rs  state_frame_projection.rs  state_frame_router.rs  workflow_step.rs
src/cost/: tracker.rs
src/history/: mod.rs  resume.rs  session.rs  transcript.rs
src/hook/: executor.rs  mod.rs  output.rs  permission_resolution.rs  registry.rs
src/interaction/: dispatcher.rs  envelope.rs  mod.rs  notification.rs  remote.rs  remote_actor.rs  router.rs  view.rs  web.rs
src/plan/: manager.rs  types.rs
src/plugins/: diagnostics.rs  loader.rs  mod.rs  runtime.rs  runtime_state.rs  state.rs  types.rs
src/prompt/: context.rs  mod.rs  system.rs  tools.rs
src/security/: approval_protocol.rs  audit.rs  authorizer.rs  filesystem_policy.rs  mod.rs  sandbox_config.rs  workspace_capability.rs
src/service/: mod.rs  observability.rs
src/skills/: bundled.rs  cache.rs  frontmatter.rs  loader.rs  mod.rs  registry.rs  types.rs  visibility.rs
src/state/: active_model_runtime.rs  app_state.rs  mod.rs  permission_context.rs  plan_mode.rs  store.rs
src/task/: list_manager.rs  list_types.rs  manager.rs  mod.rs  output_store.rs  types.rs
src/tool/: definition.rs  mod.rs  orchestrator.rs  permission.rs  registry.rs  result.rs
tests/: integration.rs  run_boss_lism_matrix.sh  unit.rs
tests/fixtures/: plugin_runtime_echo.wat  plugin_runtime_large_output.wat  plugin_runtime_loop.wat  plugin_runtime_missing_alloc.wat  plugin_runtime_static_data.wat
tests/integration/: approval_audit_flow.rs  bash_tool.rs  beta_drill.rs  boss_flow.rs  cli_smoke.rs  config_root_override_flow.rs  filesystem_policy_flow.rs  lism_ab_boss_flow.rs  plan_resume_flow.rs  plugin_flow.rs  provider_api_mock.rs  provider_smoke.rs  remote_flow.rs  skills_visibility.rs  telegram_transport_flow.rs  web_flow.rs  workspace_permission_flow.rs
tests/unit/: acceptance_loop1_tests.rs  approval_protocol_tests.rs  attachment_tests.rs  bootstrap_tests.rs  boss_test_readiness_tests.rs  boss_test_sample_sink_tests.rs  context_prompt_tests.rs  coordinator_tests.rs  cost_tests.rs  hook_tests.rs  (+29 more)
(+86 files in other folders)
