[package]
name = "rust_agent"
version = "0.1.0"
edition = "2024"
description = "Rust agent runtime scaffold for LearnCCfromCC"
license = "MIT"

[lib]
name = "rust_agent"
path = "src/lib.rs"

[[bin]]
name = "rust-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_matches = "1.5"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
