[package]
name = "rust_agent"
version = "0.1.0"
edition = "2024"
description = "Rust agent runtime scaffold for LearnCCfromCC"
license = "MIT"

[lib]
name = "rust_agent"
path = "src/lib.rs"

[[bin]]
name = "rust-agent"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.45", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sysinfo = "0.33"
futures-util = "0.3"

[dev-dependencies]
assert_matches = "1.5"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "test-util"] }
